<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="36dp"
        android:text="@string/app_title"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_riddle"
        android:layout_width="321dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="26dp"
        android:text="@string/tv_riddle"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

    <EditText
        android:id="@+id/ed_answer"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textColor="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/textview2"
        app:layout_constraintStart_toEndOf="@+id/textview2"
        app:layout_constraintTop_toBottomOf="@+id/tv_riddle" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="63dp"
        android:layout_height="34dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_riddle"
        app:layout_constraintTop_toBottomOf="@id/tv_riddle" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginTop="22dp"
        android:text="@string/tv_result"
        android:textAlignment="center"
        android:textColor="#72000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="425dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_answer">

        <Button
            android:id="@+id/btn_riddle"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/btn_riddle" />

        <Button
            android:id="@+id/btn_answer"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_answer" />

        <Button
            android:id="@+id/btn_reAnswer"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_reAnswer" />

        <Button
            android:id="@+id/btn_showAnswer"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_showAnswer" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>